[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptcmd"
authors = [
  { name="Bill Dengler", email="codeofdusk@gmail.com" },
]
description = "Command line GPT conversation and experimentation environment"
readme = "README.md"
requires-python = ">=3.7.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]
dependencies = [
    # openai/openai-python#1784: versions 1.40.0 and above fail to install on Python 3.7
    "openai>=1.26.0, <2.0.0 ; python_version >= '3.8'",
    "openai>=1.26.0, <1.40.0 ; python_version < '3.8'",
    "tomli>=1.1.0 ; python_version < '3.11'",
    "backports.strenum>=1.3.1, <2.0.0 ; python_full_version >= '3.8.6' and python_version < '3.11'",
    "StrEnum==0.4.15 ; python_full_version < '3.8.6'",
    "importlib-metadata>=1.0.0, < 9.0.0 ; python_version < '3.8'"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/codeofdusk/gptcmd"
"Bug Tracker" = "https://github.com/codeofdusk/gptcmd/issues"

[project.scripts]
gptcmd = "gptcmd.cli:main"

[tool.setuptools.package-data]
"gptcmd" = ["config_sample.toml"]

[tool.setuptools.dynamic]
version = {attr = "gptcmd.cli.__version__"}

[tool.black]
line-length = 79
target-version = ['py37']
preview=true
