[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gptcmd"
authors = [
  { name="Bill Dengler", email="codeofdusk@gmail.com" },
]
description = "Command line GPT conversation and experimentation environment"
readme = "README.md"
requires-python = ">=3.8.6"
license = "MPL-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.54.0, < 3.0.0",
    "tomli>=1.1.0, < 2.0.0 ; python_version < '3.11'",
    "backports.strenum>=1.3.1, < 2.0.0 ; python_version < '3.11'",
    "importlib_metadata>=3.6 ; python_version < '3.10'",
    "packaging>=23.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/codeofdusk/gptcmd"
"Bug Tracker" = "https://github.com/codeofdusk/gptcmd/issues"

[project.scripts]
gptcmd = "gptcmd.cli:main"

[tool.setuptools.package-data]
"gptcmd" = ["config_sample.toml"]

[tool.setuptools.dynamic]
version = {attr = "gptcmd.__version__"}

[tool.black]
line-length = 79
target-version = ['py38']
preview=true
